# marketplace-image-rag

./: CLAUDE.md  README.md  main.py  pyproject.toml
config/: expose.yaml  postgres.yaml  spark-values.yaml
dataset/: const.py  dataset.py  db.py  loss.py  model.py
docs/: loss function.md  model.md  text to image search.md
etl/: main.py
marketplace/: const.py  dataset.py  db.py
notebooks/: 02 embed.ipynb  03 similarity search.ipynb  04 classification.ipynb  05 category prediction.ipynb
scripts/: devenv.sh
